--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -203,3 +203,15 @@
 .dark ::-webkit-scrollbar-thumb:hover {
     background: hsl(0 0% 45%);
 }
+
+/* Hide number input spinners/arrows */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
